--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <title>Home</title>
@@ -19,11 +19,11 @@
         <div id="nav" class="row mr-2 ml-2">
             <!-- Navigation -->
             <nav class="navbar navbar-expand-lg navbar-dark pt-1 px-0">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavIndex"
+                        aria-controls="navbarNavIndex" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse rr-flex" id="navbarNavDropdown">
+                <div class="collapse navbar-collapse rr-flex" id="navbarNavIndex">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Inicio</a>
@@ -91,7 +91,7 @@
                                 </div>
                             </div>
                             <div class="d-flex justify-content-center mt-2">
-                                <button class="btn btn-orange" type="submit">Detalles</button>
+                                <button class="btn btn-outline-primary" type="submit">Detalles</button>
                             </div>
                         </div>
                         <div class="carousel-item">
@@ -111,7 +111,7 @@
                                 </div>
                             </div>
                             <div class="d-flex justify-content-center mt-2">
-                                <button class="btn btn-orange" type="submit">Detalles</button>
+                                <button class="btn btn-outline-primary" type="submit">Detalles</button>
                             </div>
                         </div>
                     </div>
@@ -153,7 +153,7 @@
                                     <input class="form-control" type="text" placeholder="Precio">
                                 </div>
                                 <div class="col-lg-3 col-md-3 col-sm-12 justify-content-center align-content-center">
-                                    <button class="btn btn-orange" type="submit">Buscar...</button>
+                                    <button class="btn btn-orange" type="submit">Buscar<i class="fas fa-search"></i></button>
                                 </div>
                             </form>
                             <div class="col-lg-2 col-md-2 col-sm-12 justify-content-center align-content-center">
@@ -172,7 +172,7 @@
     <div class="container pt-3 mt-4 mb-4">
         <h1 class="align-text-center">Inmuebles destacados</h1>
     </div>
-    <div class="intro-items mb-5">
+    <div id="intro-items" class="mb-5">
         <div class="card mr-2 ml-2">
             <div class="salient-img">
                 <img class="card-img-top" th:src="@{/assets/img/house2.jpg}" alt="Card image cap">
@@ -208,7 +208,7 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center mt-2">
-                    <button class="btn btn-orange" type="submit">Detalles</button>
+                    <button class="btn btn-outline-primary" type="submit">Detalles</button>
                 </div>
             </div>
         </div>
@@ -246,7 +246,7 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center mt-2">
-                    <button class="btn btn-orange" type="submit">Detalles</button>
+                    <button class="btn btn-outline-primary" type="submit">Detalles</button>
                 </div>
             </div>
         </div>
@@ -285,7 +285,7 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center mt-2">
-                    <button class="btn btn-orange" type="submit">Detalles</button>
+                    <button class="btn btn-outline-primary" type="submit">Detalles</button>
                 </div>
             </div>
         </div>
@@ -324,7 +324,7 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center mt-2">
-                    <button class="btn btn-orange" type="submit">Detalles</button>
+                    <button class="btn btn-outline-primary" type="submit">Detalles</button>
                 </div>
             </div>
         </div>
@@ -363,7 +363,7 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center mt-2">
-                    <button class="btn btn-orange" type="submit">Detalles</button>
+                    <button class="btn btn-outline-primary" type="submit">Detalles</button>
                 </div>
             </div>
         </div>
@@ -377,7 +377,7 @@
 <script type="text/javascript" th:src="@{/assets/js/general/bootstrap.min.js}" crossorigin="anonymous"></script>
 <script type="text/javascript" th:src="@{/assets/js/general/shards.min.js}"></script>
 <script type="text/javascript" th:src="@{/assets/js/general/jquery.sharrre.min.js}"></script>
-<script type="text/javascript" th:src="@{/assets/js/search/map-config.js}"></script>
+<script type="text/javascript" th:src="@{/assets/js/general/slick.min.js}"></script>
 <script type="text/javascript" th:src="@{/assets/js/index/slick-config.js}"></script>
 
 </body>
