--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <title>Home</title>
@@ -20,7 +20,7 @@
 <body>
 <!--nav bar -->
 <header id="menu-search" class="position-fixed">
-    <div class="row bg-light mr-1 ml-1">
+    <div class="row bg-light pr-1 pl-1">
         <nav class="navbar navbar-expand-lg pt-0 pl-2 pb-0 navbar-light bg-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,7 +63,7 @@
             </div>
         </nav>
     </div>
-    <div class="row bg-light mr-3 ml-3 pb-2">
+    <div class="row bg-light pr-3 pl-3 pb-2">
         <div class="col-md-9">
             <div class="flex-row justify-content-between">
                 <h5 class="title mt-1 d-inline">Filtros&nbsp;&nbsp;</h5>
@@ -71,26 +71,27 @@
                 <button class="btn btn-outline-primary">Tipo de propiedad</button>
                 <button class="btn btn-primary">+1 amb</button>
                 <button class="btn btn-outline-primary">Cocheras</button>
-                <button class="btn btn-outline-primary">Precio</button>
+                <button id="price-btn" class="btn btn-outline-primary">Precio</button>
                 <button class="btn btn-outline-primary">Superficie</button>
-                <button id="price-test" type="button" class="btn btn-outline-primary">
-                    Popover on bottom
-                </button>
-                <div id="price-nav-popover" class="content hide">
-                    <div id="price-range-slider" >
-                        <input type="hidden" class='custom-slider-input' name="custom-slider-value-1">
-                        <input type="hidden" class='custom-slider-input' name="custom-slider-value-2">
-                    </div>
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon1"><i class="fas fa-dollar-sign"></i></span>
+                <div id="price-nav-popover" class="popover hide">
+                    <h3 class="popover-header">Precio</h3>
+                    <div class="popover-body">
+                        <div id="price-range-slider">
+                            <input type="hidden" class='custom-slider-input' name="custom-slider-value-1">
+                            <input type="hidden" class='custom-slider-input' name="custom-slider-value-2">
                         </div>
-                        <input type="number" id="min-price" class="form-control" placeholder="Min"
-                               aria-label="min-price"
-                               aria-describedby="basic-addon1">
-                        <input type="number" id="max-price" class="form-control" placeholder="Max"
-                               aria-label="max-price"
-                               aria-describedby="basic-addon2">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="basic-addon1"><i
+                                        class="fas fa-dollar-sign"></i></span>
+                            </div>
+                            <input type="number" id="min-price" class="form-control" placeholder="Min"
+                                   aria-label="min-price"
+                                   aria-describedby="basic-addon1">
+                            <input type="number" id="max-price" class="form-control" placeholder="Max"
+                                   aria-label="max-price"
+                                   aria-describedby="basic-addon2">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -369,11 +370,6 @@
 <script type="text/javascript" th:src="@{/assets/js/search/search-content.js}"></script>
 <script>
 
-    window.onload = function () {
-        initMap();
-        setPopoverMenu("price-test", "price-nav-popover");
-    };
-
     function initMap() {
         var myLatLng = {lat: -25.363, lng: 131.044};
 
@@ -388,6 +384,28 @@
             title: 'Search results'
         });
     }
+
+    var filter = {
+        'reference' : [{'btn':'price-btn', 'slider' :'price-nav-popover'}]
+    };
+    window.onload = function () {
+        initMap();
+        filter.reference.forEach(function (e) {
+            setPopoverMenu(e.btn, e.slider);
+        });
+        filter.reference.forEach(function (e) {
+            window.addEventListener("click", function (ev) {
+                if (!document.getElementById(e.slider).contains(ev.target)){
+                    $("#"+e.slider).hide();
+                }
+            });
+        });
+
+
+    };
+
+
+
 
 
 </script>
