--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -20,7 +20,7 @@
 <body>
 <!--nav bar -->
 <header id="menu-search" class="position-fixed">
-    <div class="row bg-light pr-1 pl-1">
+    <div class="bg-light pr-1 pl-1">
         <nav class="navbar navbar-expand-lg pt-0 pl-2 pb-0 navbar-light bg-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
