--- a/src/main/resources/templates/description.html
+++ b/src/main/resources/templates/description.html
@@ -7,14 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--CSS REQUIRED-->
     <link rel="stylesheet" type="text/css" th:href="@{/assets/css/bootstrap.min.css}" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
           integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" th:href="@{/assets/css/shards.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/assets/css/main-style.css}">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" id="main-stylesheet" data-version="1.1.0"
+          th:href="@{/assets/css/shards-dashboards.1.1.0.min.css}">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
-<header >
-    <div class="row bg-light pr-1 pl-1">
+<header>
+    <div class="bg-light pr-1 pl-1">
         <nav class="navbar navbar-expand-lg pt-0 pl-2 pb-0 navbar-light bg-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,14 +65,16 @@
 </header>
 <body>
 <div class="container mt-4">
-    <h1 class="title text-accent">Casa Residencial Las Piletas<i
-            class="fas fa-star text-warning title-help-tex-sm pl-1"></i></h1>
+    <div id="name&fav">
+    <h2 class="title text-accent align-middle" >Casa Residencial Las Piletas
+        <i class="fas fa-star text-warning title-help-text-sm pl-1"></i></h2>
+    </div>
     <span class="multiline-text">ID: SV001</span>
     <div class="row">
         <div class="col-md-8">
             <div class="row mb-2">
                 <div class="col-md-12">
-                    <div id="preview-house" class="carousel slide" data-ride="carousel">
+                    <div id="preview-house" class="carousel slide" data-ride="carousel" data-interval="false">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img class="description-size d-block w-100" th:src="@{/assets/img/description/THouse1.jpg}"
@@ -102,11 +109,11 @@
                                      alt="slide 8">
                             </div>
                             <div class="house-arrow flex-row pb-3">
-                                <a href="#preview-house" id="button-prev-carousel"  role="button" data-slide="prev">
+                                <a href="#preview-house" id="button-prev-carousel"  role="button" >
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Previous</span>
                                 </a>
-                                <a href="#preview-house" id="button-next-carousel" role="button" data-slide="next" >
+                                <a href="#preview-house" id="button-next-carousel" role="button"  >
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Next</span>
                                 </a>
@@ -156,17 +163,85 @@
                     </div>
                 </div>
             </div>
+            <div class="flex-row text-right">
+                <a href="#" id="print-resume" ><i class="fas fa-print title-help-text-sm text-black"></i></a>
+                <a href="#" id="download-resume"><i  class="fas fa-download title-help-text-sm text-black"></i></a>
+            </div>
+            <div class="row mt-2">
+                <div class="col-md-12 text-justify">
+                    <p id="product-description">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+                    </p>
+                </div>
+            </div>
+            <div class="row" id="special-features-holder">
+                <div class="col-md-12">
+                    <h6>Características especiales<i class="fas fa-square text-info pl-1"></i></h6>
+                </div>
+                <div class="col-md-12">
+                    <div id="special-features" class="row">
+                        <div class="col-md-4">
+                            <p><i class="fas fa-check text-info pr-1"></i>Portico</p>
+                        </div>
+                        <div class="col-md-4">
+                            <p><i class="fas fa-check text-info pr-1"></i>Parque</p>
+                        </div>
+                        <div class="col-md-4">
+                            <p><i class="fas fa-check text-info pr-1"></i>Acceso a piscina</p>
+                        </div>
+                        <div class="col-md-4">
+                            <p><i class="fas fa-check text-info pr-1"></i>Gimnasio</p>
+                        </div>
+                        <div class="col-md-4">
+                            <p><i class="fas fa-check text-info pr-1"></i>Comedor privado</p>
+                        </div>
+                        <div class="col-md-4">
+                            <p><i class="fas fa-check text-info pr-1"></i>Jardin</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row" id="nearby-description-holder">
+                <div class="col-md-12">
+                    <h6>Cerca<i class="fas fa-square text-info pl-1"></i></h6>
+                </div>
+                <div class="col-md-12 mt-1" id="nearby-description text-justify">
+                    <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div id="nearby-features" class="row">
+                    <div class="col-md-4">
+                        <p><i class="fas fa-map-marker-alt text-info pr-1"></i><b>Hospital: </b>1.2Kms</p>
+                    </div>
+                    <div class="col-md-4">
+                        <p><i class="fas fa-map-marker-alt text-info pr-1"></i><b>Aeropuerto: </b>2Kms</p>
+                    </div>
+                    <div class="col-md-4">
+                        <p><i class="fas fa-map-marker-alt text-info pr-1"></i><b>Gimnasio: </b>2Kms</p>
+                    </div>
+                    <div class="col-md-4">
+                        <p><i class="fas fa-map-marker-alt text-info pr-1"></i><b>Escuela: </b>1.7Kms</p>
+                    </div>
+                    <div class="col-md-4">
+                        <p><i class="fas fa-map-marker-alt text-info pr-1"></i><b>Estación de buses: </b>1.7Kms</p>
+                    </div>
+                    <div class="col-md-4">
+                        <p><i class="fas fa-map-marker-alt text-info pr-1"></i><b>Libreria: </b>1.7Kms</p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="col-md-4">
             <div class="row">
-                <div class="col-md-10">
+                <div id="price" class="col-md-10">
                     <h4 class="title text-shuttle-gray">$550,000.-</h4>
                 </div>
-                <div class="col-md-2">
-                    <h4><i class="far fa-heart text-danger "></i></h4>
+                <div id="favorite" class="col-md-2">
+                    <h4><i class="fas fa-heart text-danger "></i></h4>
                 </div>
             </div>
-            <div class="row">
+            <div id="features" class="row align-text-center">
                 <div class="col-md-6">
                     <i class="far fa-clone"></i> 2
                     <h6>Cuartos</h6>
@@ -180,43 +255,43 @@
                     <h6>Baños</h6>
                 </div>
                 <div class="col-md-6">
-                    <i class="fas fa-layer-group"></i> 1500 m^2
-                    <h6>Área</h6>
+                    <i class="fas fa-layer-group"></i> 1500
+                    <h6>Área m^2</h6>
                 </div>
             </div>
             <hr>
             <div class="row">
-                <div class="col-md-12 d-flex flex-row align-items-center text-center ">
+                <div class="col-md-12 d-flex flex-row align-items-center justify-content-center">
                     <img class="d-block w-50" th:src="@{/assets/img/general/3dtourlogo.png}"
                          alt="Virtual">
                     <button class="btn btn-primary fit-height">Ver tour virtual</button>
                 </div>
             </div>
             <hr>
-            <div class="row mb-3 text-center">
+            <div class="row mb-4 text-center">
                 <div class="col-md-4">
-                    <button class="btn btn-pill btn-outline-primary w-100 h-100">Hoja<br>Tecnica</button>
+                    <button class="btn btn-pill btn-info w-100 h-100">Hoja<br>Tecnica</button>
                 </div>
                 <div class="col-md-4">
-                    <button class="btn btn-pill btn-outline-primary w-100 h-100">Planos<br>ARQ</button>
+                    <button class="btn btn-pill btn-info w-100 h-100">Planos<br>ARQ</button>
                 </div>
                 <div class="col-md-4">
-                    <button class="btn btn-pill btn-outline-primary w-100 h-100">Valúo</button>
+                    <button class="btn btn-pill btn-info w-100 h-100">Valúo</button>
                 </div>
             </div>
-            <div class="row">
+            <div class="row row-eq-height">
                 <div class="col-md-4">
-                    <img class="d-block w-100"  th:src="@{/assets/img/avatar1.jpg}" th:alt="Name">
+                    <img class="d-block w-100 h-100"  th:src="@{/assets/img/avatar1.jpg}" th:alt="Name">
                 </div>
-                <div class="col-md-8 flex-column align-items-center text-center">
-                    <div class="flex-row">
+                <div class="col-md-8 flex-column align-items-baseline align-bottom bottom text-center">
+                    <div class="flex-row align-items-center">
                         <i class="fas fa-star text-warning pl-1"></i>
                         <i class="fas fa-star text-warning pl-1"></i>
                         <i class="fas fa-star text-warning pl-1"></i>
                         <i class="fas fa-star text-warning pl-1"></i>
                         <i class="far fa-star text-warning pl-1"></i>
                     </div>
-                    <h4 class="text-shuttle-gray" id="user-name">Johnson Mateo</h4>
+                    <h5 class="text-shuttle-gray" id="user-name">Johnson Mateo</h5>
                     <button class="btn btn-primary w-100 mb-1">Contactar</button>
                     <button class="btn btn-primary w-100">Agenda tu Cita</button>
                 </div>
