--- a/src/main/resources/templates/description.html
+++ b/src/main/resources/templates/description.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <title>Home</title>
@@ -66,54 +66,63 @@
 <body>
 <div class="container mt-4">
     <div id="name&fav">
-    <h2 class="title text-accent align-middle" >Casa Residencial Las Piletas
-        <i class="fas fa-star text-warning title-help-text-sm pl-1"></i></h2>
+        <h2 class="title text-accent align-middle">Casa Residencial Las Piletas
+            <i class="fas fa-star text-warning title-help-text-sm pl-1"></i></h2>
     </div>
     <span class="multiline-text">ID: SV001</span>
     <div class="row">
+        <!-- Image and description -->
         <div class="col-md-8">
             <div class="row mb-2">
                 <div class="col-md-12">
                     <div id="preview-house" class="carousel slide" data-ride="carousel" data-interval="false">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="description-size d-block w-100" th:src="@{/assets/img/description/THouse1.jpg}"
+                                <img class="description-size d-block w-100"
+                                     th:src="@{/assets/img/description/THouse1.jpg}"
                                      alt="slide 1">
                             </div>
                             <div class="carousel-item">
-                                <img class="description-size d-block w-100" th:src="@{/assets/img/description/THouse2.jpg}"
+                                <img class="description-size d-block w-100"
+                                     th:src="@{/assets/img/description/THouse2.jpg}"
                                      alt="slide 2">
                             </div>
                             <div class="carousel-item">
-                                <img class="description-size d-block w-100" th:src="@{/assets/img/description/THouse3.jpg}"
+                                <img class="description-size d-block w-100"
+                                     th:src="@{/assets/img/description/THouse3.jpg}"
                                      alt="slide 3">
                             </div>
                             <div class="carousel-item">
-                                <img class="description-size d-block w-100" th:src="@{/assets/img/description/THouse4.jpg}"
+                                <img class="description-size d-block w-100"
+                                     th:src="@{/assets/img/description/THouse4.jpg}"
                                      alt="slide 4">
                             </div>
                             <div class="carousel-item">
-                                <img class="description-size d-block w-100" th:src="@{/assets/img/description/THouse5.jpg}"
+                                <img class="description-size d-block w-100"
+                                     th:src="@{/assets/img/description/THouse5.jpg}"
                                      alt="slide 5">
                             </div>
                             <div class="carousel-item">
-                                <img class="description-size d-block w-100" th:src="@{/assets/img/description/THouse6.jpg}"
+                                <img class="description-size d-block w-100"
+                                     th:src="@{/assets/img/description/THouse6.jpg}"
                                      alt="slide 6">
                             </div>
                             <div class="carousel-item">
-                                <img class="description-size d-block w-100" th:src="@{/assets/img/description/THouse7.jpg}"
+                                <img class="description-size d-block w-100"
+                                     th:src="@{/assets/img/description/THouse7.jpg}"
                                      alt="slide 7">
                             </div>
                             <div class="carousel-item">
-                                <img class="description-size d-block w-100" th:src="@{/assets/img/description/THouse8.jpg}"
+                                <img class="description-size d-block w-100"
+                                     th:src="@{/assets/img/description/THouse8.jpg}"
                                      alt="slide 8">
                             </div>
                             <div class="house-arrow flex-row pb-3">
-                                <a href="#preview-house" id="button-prev-carousel"  role="button" >
+                                <a href="#preview-house" id="button-prev-carousel" role="button">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Previous</span>
                                 </a>
-                                <a href="#preview-house" id="button-next-carousel" role="button"  >
+                                <a href="#preview-house" id="button-next-carousel" role="button">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Next</span>
                                 </a>
@@ -164,13 +173,19 @@
                 </div>
             </div>
             <div class="flex-row text-right">
-                <a href="#" id="print-resume" ><i class="fas fa-print title-help-text-sm text-black"></i></a>
-                <a href="#" id="download-resume"><i  class="fas fa-download title-help-text-sm text-black"></i></a>
+                <a href="#" id="print-resume"><i class="fas fa-print title-help-text-sm text-black"></i></a>
+                <a href="#" id="download-resume"><i class="fas fa-download title-help-text-sm text-black"></i></a>
             </div>
             <div class="row mt-2">
                 <div class="col-md-12 text-justify">
                     <p id="product-description">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                        of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+                        but also the leap into electronic typesetting, remaining essentially unchanged. It was
+                        popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+                        and more recently with desktop publishing software like Aldus PageMaker including versions of
+                        Lorem Ipsum
                     </p>
                 </div>
             </div>
@@ -206,32 +221,33 @@
                     <h6>Cerca<i class="fas fa-square text-info pl-1"></i></h6>
                 </div>
                 <div class="col-md-12 mt-1" id="nearby-description text-justify">
-                    <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
                 </div>
-            </div>
-            <div class="col-md-12">
-                <div id="nearby-features" class="row">
-                    <div class="col-md-4">
-                        <p><i class="fas fa-map-marker-alt text-info pr-1"></i><b>Hospital: </b>1.2Kms</p>
-                    </div>
-                    <div class="col-md-4">
-                        <p><i class="fas fa-map-marker-alt text-info pr-1"></i><b>Aeropuerto: </b>2Kms</p>
-                    </div>
-                    <div class="col-md-4">
-                        <p><i class="fas fa-map-marker-alt text-info pr-1"></i><b>Gimnasio: </b>2Kms</p>
-                    </div>
-                    <div class="col-md-4">
-                        <p><i class="fas fa-map-marker-alt text-info pr-1"></i><b>Escuela: </b>1.7Kms</p>
-                    </div>
-                    <div class="col-md-4">
-                        <p><i class="fas fa-map-marker-alt text-info pr-1"></i><b>Estación de buses: </b>1.7Kms</p>
-                    </div>
-                    <div class="col-md-4">
-                        <p><i class="fas fa-map-marker-alt text-info pr-1"></i><b>Libreria: </b>1.7Kms</p>
+                <div class="col-md-12">
+                    <div id="nearby-features" class="row">
+                        <div class="col-md-4">
+                            <p><i class="fas fa-map-marker-alt text-info pr-1"></i><b>Hospital: </b>1.2Kms</p>
+                        </div>
+                        <div class="col-md-4">
+                            <p><i class="fas fa-map-marker-alt text-info pr-1"></i><b>Aeropuerto: </b>2Kms</p>
+                        </div>
+                        <div class="col-md-4">
+                            <p><i class="fas fa-map-marker-alt text-info pr-1"></i><b>Gimnasio: </b>2Kms</p>
+                        </div>
+                        <div class="col-md-4">
+                            <p><i class="fas fa-map-marker-alt text-info pr-1"></i><b>Escuela: </b>1.7Kms</p>
+                        </div>
+                        <div class="col-md-4">
+                            <p><i class="fas fa-map-marker-alt text-info pr-1"></i><b>Estación de buses: </b>1.7Kms</p>
+                        </div>
+                        <div class="col-md-4">
+                            <p><i class="fas fa-map-marker-alt text-info pr-1"></i><b>Libreria: </b>1.7Kms</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- / Image and description -->
         <div class="col-md-4">
             <div class="row">
                 <div id="price" class="col-md-10">
@@ -281,9 +297,9 @@
             </div>
             <div class="row row-eq-height">
                 <div class="col-md-4">
-                    <img class="d-block w-100 h-100"  th:src="@{/assets/img/avatar1.jpg}" th:alt="Name">
+                    <img class="d-block w-100 h-100" th:src="@{/assets/img/avatar1.jpg}" th:alt="Name">
                 </div>
-                <div class="col-md-8 flex-column align-items-baseline align-bottom bottom text-center">
+                <div class="col-md-8 flex-column align-items-end align-content-end text-center">
                     <div class="flex-row align-items-center">
                         <i class="fas fa-star text-warning pl-1"></i>
                         <i class="fas fa-star text-warning pl-1"></i>
@@ -297,8 +313,84 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-7">
+            <div id="map" class="w-100 h-100"></div>
+        </div>
+        <div class="col-md-5">
+            <div class="card">
+                <div class="card-header bg-primary">
+                    <h4 class="text-center text-white">Calcula tu cuota</h4>
+                </div>
+                <div class="card-body">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">
+                            <div class="row">
+                                <div class="col-md-12 d-flex flex-column">
+                                    <label class="text-muted" for="calculator-price">Precio del inmueble</label>
+                                    <div class="input-group mb-3 w-100">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text">$</span>
+                                        </div>
+                                        <input id="calculator-price" type="text" class="form-control">
+                                        <div class="input-group-append">
+                                            <span class="input-group-text"><i class="fas fa-info"></i></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 d-flex flex-column">
+                                    <label class="text-muted" for="calculator-interest">Tasa de interés (%)</label>
+                                    <div class="input-group mb-3 w-100">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text">%</span>
+                                        </div>
+                                        <input id="calculator-interest" type="text" class="form-control">
+                                        <div class="input-group-append">
+                                            <span class="input-group-text"><i class="fas fa-info"></i></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 d-flex flex-column">
+                                    <label class="text-muted" for="calculator-initial">Pago inicial (%)</label>
+                                    <div class="input-group mb-3 w-100">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text">%</span>
+                                        </div>
+                                        <input id="calculator-initial" type="text" class="form-control">
+                                        <div class="input-group-append">
+                                            <span class="input-group-text"><i class="fas fa-info"></i></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 d-flex flex-column">
+                                    <label class="text-muted" for="calculator-years"><i
+                                            class='fas fa-check text-warning pr-1'></i>Años</label>
+                                    <div class="input-group mb-3 w-100">
+                                        <input id="calculator-years" type="text" class="form-control">
+                                        <div class="input-group-append">
+                                            <span class="input-group-text"><i class="fas fa-info"></i></span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="row d-flex flex-row justify-content-between">
+                                <button class="btn btn-lg btn-success">Calcular</button>
+                                <button class="btn btn-lg btn-dark">Reiniciar</button>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+<div class="container mt-4">
+    <h1 class="align-text-center mb-4">Inmuebles destacados</h1>
+    <div class=""></div>
+</div>
+
+<br>
 </body>
 <script type="text/javascript" th:src="@{/assets/js/general/jquery-3.3.1.slim.min.js}" crossorigin="anonymous"></script>
 <script type="text/javascript" th:src="@{/assets/js/general/popper.min.js}" crossorigin="anonymous"></script>
@@ -307,4 +399,54 @@
 <script type="text/javascript" th:src="@{/assets/js/general/jquery.sharrre.min.js}"></script>
 <script type="text/javascript" th:src="@{/assets/js/general/slick.min.js}"></script>
 <script type="text/javascript" th:src="@{/assets/js/description/slick-config.js}"></script>
+<script type="text/javascript" th:inline="javascript">
+    function initMap() {
+        var location = [[${location}]];
+        var nearbyMap = [[${points}]];
+
+
+        var averageLng = location.lng;
+        var averageLat = location.lat;
+        var targetLocation = new google.maps.LatLng(averageLat, averageLng);
+        var interestSize = 1;
+        var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 14,
+            center: targetLocation,
+            mapTypeId: 'roadmap'
+        });
+
+        nearbyMap.forEach(function (p) {
+            new google.maps.Marker({
+                position: new google.maps.LatLng(p.lat, p.lng),
+                map: map
+            });
+            interestSize++;
+            averageLng += p.lng;
+            averageLat += p.lat;
+        });
+
+        averageLng = Math.abs(averageLng);
+        averageLat = Math.abs(averageLat);
+
+
+        var cityCircle = new google.maps.Circle({
+            strokeColor: '#18ffbb',
+            strokeOpacity: 0.8,
+            strokeWeight: 2,
+            fillColor: '#62ffc1',
+            fillOpacity: 0.35,
+            map: map,
+            center: targetLocation,
+            radius: 100
+        });
+    }
+
+    window.loaded = function () {
+        initMap();
+    }
+</script>
+<script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXeby84Czz7k7aBjHuUGw8BZEhhl-k_qI&callback=initMap">
+</script>
+
 </html>
