--- a/src/main/resources/static/assets/css/main-style.css
+++ b/src/main/resources/static/assets/css/main-style.css
@@ -164,18 +164,27 @@
 }
 
 #menu-search{
-    z-index: 10;
     top: 0;
     left: 0;
-    height: 100vh;
-    width: 100vw;
+    max-width: 100%;
+    max-height: 14vh;
 }
 #menu-search > *{
-    max-width: 100vw;
+    width: 100%;
+}
+#search-container{
+    max-height: 86vh;
+}
+#search-map-results-holder{
+    max-width: 100%;
+}
+#search-results-container{
+    overflow: hidden;
 }
 #map {
     background-color: grey;
-    height: 92vh;
+    height: 100%;
+    width: 100%;
 }
 .hide{
     display: none;
@@ -200,3 +209,16 @@
 .set-slicker{
     height: 72px;
 }
+.clickable-link{
+    cursor: pointer;
+}
+.traspasable{
+    z-index: -10;
+}
+.instraspasable{
+    z-index: 10;
+}
+.target-found{
+    z-index: 9;
+}
+
