--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -125,8 +125,8 @@
 </header>
 <!--/end nav bar -->
 
-<div class="container-fluid">
-    <div class="row">
+<div class="container-fluid search-size">
+    <div class="row search-size">
         <div id="search-results-container" class="col-md-12">
             <div class="container mt-4">
                 <h3 class="title pt-2 pb-1 col-md-12 col-sm-12">Resultados de busqueda</h3>
