--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -133,7 +133,8 @@
                 <div class="row">
                     <div id="search-results" class="col-md-12 row">
                         <div class="col-md-4 mb-4 ml-auto mr-auto">
-                            <div class="card target-found" th:href="@{/description}">
+                            <a th:href="@{/description}" class="custom-card">
+                            <div class="card target-found" >
                                 <div class="salient-img">
                                     <img class="card-img-top" th:src="@{/assets/img/house1.jpg}" alt="Card image cap">
                                     <div class="salient-action">
@@ -170,9 +171,11 @@
                                     </div>
                                 </div>
                             </div>
+                            </a>
                         </div>
                         <div class="col-md-4 mb-4 ml-auto mr-auto">
-                            <div class="card target-found" th:href="@{/description}">
+                            <a th:href="@{/description}" class="custom-card">
+                            <div class="card target-found" >
                                 <div class="salient-img">
                                     <img class="card-img-top" th:src="@{/assets/img/house2.jpg}" alt="Card image cap">
                                     <div class="salient-action">
@@ -209,9 +212,11 @@
                                     </div>
                                 </div>
                             </div>
+                            </a>
                         </div>
                         <div class="col-md-4 mb-4 ml-auto mr-auto">
-                            <div class="card target-found" th:href="@{/description}">
+                            <a th:href="@{/description}" class="custom-card">
+                            <div class="card target-found">
                                 <div class="salient-img">
                                     <img class="card-img-top" th:src="@{/assets/img/house3.jpg}" alt="Card image cap">
                                     <div class="salient-action">
@@ -248,9 +253,11 @@
                                     </div>
                                 </div>
                             </div>
+                            </a>
                         </div>
                         <div class="col-md-4 mb-4 ml-auto mr-auto">
-                            <div class="card target-found" th:href="@{/description}">
+                            <a th:href="@{/description}" class="custom-card">
+                            <div class="card target-found">
                                 <div class="salient-img">
                                     <img class="card-img-top" th:src="@{/assets/img/house3.jpg}" alt="Card image cap">
                                     <div class="salient-action">
@@ -287,9 +294,11 @@
                                     </div>
                                 </div>
                             </div>
+                            </a>
                         </div>
                         <div class="col-md-4 mb-4 ml-auto mr-auto">
-                            <div class="card target-found" th:href="@{/description}">
+                            <a th:href="@{/description}" class="custom-card">
+                            <div class="card target-found">
                                 <div class="salient-img">
                                     <img class="card-img-top" th:src="@{/assets/img/house2.jpg}" alt="Card image cap">
                                     <div class="salient-action">
@@ -326,9 +335,11 @@
                                     </div>
                                 </div>
                             </div>
+                            </a>
                         </div>
                         <div class="col-md-4 mb-4 ml-auto mr-auto">
-                            <div class="card target-found" th:href="@{/description}">
+                            <a th:href="@{/description}" class="custom-card">
+                            <div class="card target-found">
                                 <div class="salient-img">
                                     <img class="card-img-top" th:src="@{/assets/img/house1.jpg}" alt="Card image cap">
                                     <div class="salient-action">
@@ -364,9 +375,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <button class="btn btn-info">TEST</button>
                             </div>
-
+                            </a>
                         </div>
                     </div>
                 </div>
